--- a/about.html
+++ b/about.html
@@ -28,6 +28,6 @@ Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cu
     </main>
 </body>
 <footer class="footer">
-    <p>Desenvolvido por Mauricio Grass de Bronstein</p>
+    <p>Desenvolvido por Mauricio Bronstein</p>
 </footer>
 </html>
