--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     </main>
     <footer class="footer">
-        <p>Desenvolvido por Mauricio Bronstein</p>
+        <p>Desenvolvido por <br> Mauricio Bronstein</p>
     </footer>
 
 </body>
