--- a/meucurriculo.html
+++ b/meucurriculo.html
@@ -66,6 +66,6 @@
     </main>
 </body>
 <footer class="footer">
-    <p>Desenvolvido por Mauricio Bronstein</p>
+    <p>Desenvolvido por <br> Mauricio Bronstein</p>
 </footer>
 </html>
