--- a/about.html
+++ b/about.html
@@ -19,15 +19,17 @@
         <section >
         <h1 class="container__filhos__titulo">Sobre mim<br><br></h1>
      <p class="container__filhos__paragrafo">
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. <br><br>
+        Olá, sou Mauricio Grass de Bronstein, um desenvolvedor Front-end apaixonado por tecnologia e inovação. Tenho conhecimento em HTML, CSS e JavaScript, e estou sempre buscando aprender mais para aprimorar minhas habilidades e me manter atualizado com as novas tendências do mercado. <br><br>
 
-Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.
+Meu foco está em criar interfaces web responsivas e de fácil usabilidade, garantindo que a experiência do usuário seja sempre otimizada. Embora eu ainda não tenha experiência profissional no campo, dedico-me a desenvolver projetos próprios, sempre em busca de desafios que me permitam crescer e aplicar meu aprendizado de forma prática. <br><br>
+
+Se você deseja conversar sobre projetos, novas oportunidades ou trocar ideias sobre tecnologia, ficarei feliz em ouvir você! Vamos nos conectar.
     </p>
         </section>
     <img class="container__minha__foto__about" src="assets/minha foto.jpg" alt="foto de Mauricio Grass de Bronstein">
     </main>
 </body>
 <footer class="footer">
-     <p>Desenvolvido por <br> Mauricio Bronstein</p>
+    <p>Desenvolvido por <br> Mauricio Bronstein</p>
 </footer>
 </html>
